# owl

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  Cargo.toml  Client_side.py  Descriptor.json  README.md  README.txt  Server_side.py  bun.lockb  chick.yaml  config.json  configure.py  deno.json  gang  package.json  pyrightconfig.json  requirements.txt  syncroot.py
.github/workflows/: check.yml  leenux.yml  michaelsoft.yml  ohiodetector.yml
SERVER_AND_CLIENT/: Client_side.py  Descriptor.json  Server_side.py  TCP_Communicator.py
assets/: .gitignore  question_template.json  question_test.json
assets/public/: .gitignore  global.css
assets/public/sounds/: README.md  catalog.json  convertall.py
assets/public/tangtoc/: .gitignore
assets/vcnv/: .gitignore
engine/: Cargo.toml  engine.pyi  pyproject.toml
engine/src/: api.rs  extract.rs  json.rs  lib.rs  logic.rs  net.rs  prelude.rs  universal.rs
engine/src/api/: packet.rs  part.rs  player.rs  question.rs  show.rs  status.rs  tick.rs  timer.rs
engine/src/logging/: color.rs  logger.rs
engine/src/logic/: player.rs  question.rs  show.rs  tick.rs  timer.rs
engine/src/net/: webservice_ws.rs  wsmain.rs  wspy.rs  wstime.rs
frontend/: .gitignore  bun.lockb  eslint.config.js  index.html  package.json  svelte.config.js  vite.config.ts
frontend/client/: Cargo.toml  Trunk.toml
frontend/client/src/: bridge.rs  comms.rs  jsbridge.rs  lib.rs  objutils.rs  tstypes.rs
frontend/client/src/bridge/: clientpacket.rs  querybuilder.rs  querypacket.rs  rpcbuilder.rs  timer.rs
frontend/client/src/logic/: auth.rs  auth.rs.bak  authnew.rs  khoidong.rs  panel.rs
frontend/client/types/: client.d.ts
frontend/client/types/logic/: panel.d.ts
frontend/src/: app.html  global.css
frontend/src/components/: AntiCheat.svelte  BareTimer.svelte  Load.svelte  PillTag.svelte  ScoreBar.svelte  ScorePill.svelte  ScorePillSmall.svelte  ShowAnswer.svelte  ShowAnswerColored.svelte  TextAnswer.svelte  TextAnswerColored.svelte  TimerBar.svelte  TitleBar.svelte  VCNVLine.svelte  VCNVMain.svelte  VCNVShowAnswer.svelte
frontend/src/components/display/: KhoiDongDisplay.svelte  Standby.svelte  TKD.svelte  TangTocDisplay.svelte  TieBreakerDisplay.svelte  VCNVDisplay.svelte  VeDichDisplay.svelte
frontend/src/components/judge/: KhoiDong.svelte
frontend/src/components/mc/: KhoiDongDisplay.svelte  Standby.svelte  TangTocDisplay.svelte  TieBreakerDisplay.svelte  VCNVDisplay.svelte  VeDichDisplay.svelte
frontend/src/components/panel/: KhoiDong.svelte  PartSwitcher.svelte  ScoreJudge.svelte  SetScoreOf.svelte  SoundBoard.svelte  SubmitJudger.svelte  TKD.svelte  TangToc.svelte  TieBreaker.svelte  TimerControls.svelte  VCNV.svelte  VeDich.svelte
frontend/src/components/player/: AuthPlayer.svelte  KhoiDong.svelte  TangToc.svelte  TieBreaker.svelte  VCNV.svelte  VCNVMain.svelte  VeDich.svelte
frontend/src/components/vcnv/: TextAnswer.svelte  VCNVLine.svelte  VCNVLineNumbered.svelte  VCNVMain.svelte  VCNVMainReduced.svelte  VCNVShowAnswer.svelte
frontend/src/components/vedich/: PackageChooser.svelte
frontend/src/lib/: assets.ts  gamemaster.ts  gamestate.ts  globals.ts  index.ts  player.ts  push.ts  rpcbuilder.ts  sound.ts  state.ts  value.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/display/: +page.svelte
frontend/src/routes/game/: +page.svelte
frontend/src/routes/game/khoidong/: +page.svelte
frontend/src/routes/game/vcnv/: +page.svelte
frontend/src/routes/judge/: +page.svelte
frontend/src/routes/mc/: +page.svelte
frontend/src/routes/panel/: +page.svelte
frontend/src/routes/panel2/: +layout.svelte  +page.svelte  panel.css
frontend/src/routes/panel2/components/: KhoiDong.svelte  PartSwitcher.svelte  ScoreJudge.svelte  SetScoreOf.svelte  SoundBoard.svelte  SubmitJudger.svelte  TKD.svelte  TangToc.svelte  TieBreaker.svelte  TimerControls.svelte  VCNV.svelte  VeDich.svelte
frontend/static/: global.css
server/: .gitignore  config.py  main.py  pengin.py  utils.py
server/logic/: ACCELERATION.py  Basis.py  Communicator.py  Initializing_file.json  T to the power 2.py  Viktor Delta.py  auth.py  khoidong.py  standby.py  tangtoc.py  tiebreaker.py  tkd.py  vcnv.py  vedich.py
server/penguin/: __init__.py  _option.py  _result.py  rpc.py  session.py  show.py  store.py  timekeeper.py
server/utils/: crypt.py  vcnv.py
