[package]
name = "client"
version = "2.0.0"
authors = [
    "Nguyễn Tri Phương <triph@teamfalco.org>",
    "Nguyễn Thế Việt <duchiru@teamfalco.org>",
]
license = "GPL-3.0"
repository = "https://github.com/teamfalco/owl"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
engine = { path = "../../engine", features = [
    "api",
    "wasm",
], default-features = false }
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
log = "0.4.22"
wasm-bindgen-futures = "0.4.43"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.93"
web-sys = "0.3.70"
serde = { version = "1.0", features = ["derive"] }
serde_repr = {version = "0.1"}
# serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.70"
# ws_stream_wasm = "0.7.4"
# futures = "0.3.30"
# async-channel = "2.3.1"
# async-trait = "0.1.81"
gloo-utils = { version = "0.2.0", features = ["serde"] }
serde_json = "1.0"
web-time = { version = "1.1.0", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
